# l6

./: .readthedocs.yml  pyproject.toml  requirements.txt
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
l6.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
l6_package/: __init__.py  cli.py  code.py
